--- a/packages/frontend-with-react/index.html
+++ b/packages/frontend-with-react/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="document-html">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce Site</title>
   </head>
-  <body>
+  <body class="all">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
